# lightspeed-evaluation

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README-generate-answers.md  README.md  bug_test_geval_score_mismatch.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-all-extras.txt  requirements-local-embeddings.txt  requirements-nlp-metrics.txt  requirements.txt
.ai/spec/: README.md
.ai/spec/how/: agent-drivers.md  configuration-and-models.md  metrics-implementation.md  output-and-storage.md  project-structure.md
.ai/spec/what/: agent-drivers.md  evaluation-pipeline.md  llm-and-judges.md  metrics.md  output-and-reporting.md  system-overview.md
.claude/skills/eval-investigate/: SKILL.md
.claude/skills/eval-sanity/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.github/workflows/: bandit.yaml  black.yaml  check_dependencies.yaml  e2e_tests.yaml  mypy.yaml  outdated_dependencies.yaml  pydocstyle.yaml  pylint.yaml  pyright.yaml  ruff.yaml  shellcheck.yaml  tests.yaml
archive/: README.md  pyproject.toml
archive/example_result/: README.md
archive/lightspeed_core_evaluation/: driver.py  query_rag.py  rag_eval.py  response_evaluation.py  taxonomy_eval.py
archive/lightspeed_core_evaluation/utils/: models.py  plot.py  prompts.py  relevancy_score.py  response.py  score.py
baselines/lcore_regression/: current_baseline_summary.json
config/: evaluation_data.yaml  evaluation_data_multiple_expected_responses.yaml  mmlu_example.yaml  multi_eval_config.yaml  providers_config.yaml  system.yaml
config/lcore_regression/: system-config-pr-gate.yaml
config/registry/: geval_metrics.yaml
config/sample_scripts/: cleanup.sh  setup.sh  verify.sh
dashboard/: Makefile  README.md  eval.yaml  index.html  package-lock.json  package.json  system.yaml  vite.config.js
dashboard/src/: App.css  App.jsx  index.css  main.jsx
dashboard/src/components/: AvgScoreTrendChart.jsx  ChartSetup.js  CollapsiblePanel.jsx  DetailModal.jsx  Evaluations.jsx  ExecTimeTrendChart.jsx  FilterBar.jsx  MetricBarChart.jsx  OverallAvgChart.jsx  PercentilesChart.jsx  (+6 more)
docs/: EVALUATION_GUIDE.md  agentic_lightspeed_evaluation.md  configuration.md  evaluation_comparison.md  multi_provider_evaluation.md
eval_data/: osp_doc_qna.parquet  questions.csv
eval_data/lcore_regression/: okp_rag_quality.yaml  tool_calling_quality.yaml
example_result/: README.md
examples/01_getting_started/: README.md
examples/02_metrics/: README.md
githooks/: pre-commit  pre-push
lsc_agent_eval/: README.md  pyproject.toml  requirements.txt
lsc_agent_eval/sample_data/: agent_goal_eval_example.yaml
lsc_agent_eval/sample_data/script/conv3/: setup.sh
lsc_agent_eval/sample_data/script/conv4/eval1/: verify.sh
lsc_agent_eval/sample_data/script/eval3/: cleanup.sh
lsc_agent_eval/sample_data/script/eval4/: cleanup.sh  setup.sh
lsc_agent_eval/src/lsc_agent_eval/: __init__.py  agent_eval.py
lsc_agent_eval/src/lsc_agent_eval/core/: __init__.py
lsc_agent_eval/src/lsc_agent_eval/core/agent_goal_eval/: __init__.py  agent_goal_eval.py  eval_data.py  evaluator.py  models.py  results.py  script_runner.py  tool_call_eval.py  utils.py
lsc_agent_eval/src/lsc_agent_eval/core/utils/: __init__.py  api_client.py  constants.py  exceptions.py  judge.py  prompt.py  streaming_parser.py  utils.py
lsc_agent_eval/tests/: __init__.py  test_agent_eval.py
lsc_agent_eval/tests/core/agent_goal_eval/: __init__.py  test_agent_goal_eval.py  test_eval_data.py  test_evaluator.py  test_models.py  test_results.py  test_script_runner.py  test_tool_call_eval.py
lsc_agent_eval/tests/core/utils/: test_api_client.py  test_exceptions.py  test_judge.py  test_streaming_parser.py
lsc_eval/: README.md  pyproject.toml  pytest.ini  runner.py
lsc_eval/config/: evaluation_data.yaml  system.yaml
lsc_eval/src/lsc_eval/: __init__.py  evaluation_engine.py
lsc_eval/src/lsc_eval/core/: __init__.py  config_loader.py  data_validator.py  models.py
lsc_eval/src/lsc_eval/llm_managers/: __init__.py  deepeval_llm.py  lightspeed_rag_llm.py  llm_manager.py  ragas_llm.py
lsc_eval/src/lsc_eval/metrics/: __init__.py  custom_metrics.py  deepeval_metrics.py  ragas_metrics.py
lsc_eval/src/lsc_eval/output/: __init__.py  output_handler.py  utils.py  visualization.py
lsc_eval/tests/: README.md  __init__.py  conftest.py  test_runner.py
lsc_eval/tests/core/: test_config_loader.py  test_data_validator.py  test_models.py
lsc_eval/tests/llm_managers/: __init__.py  test_llm_manager.py
lsc_eval/tests/metrics/: __init__.py  test_custom_metrics.py
lsc_eval/tests/output/: __init__.py  test_utils_streamlined.py
script/: __init__.py  compare_evaluations.py  run_multi_provider_eval.py
script/regression/: __init__.py  compare_abc_runs.py  compare_against_baseline.py
specs/: agentic_openshift_lightspeed_evaluation.md
src/generate_answers/: __init__.py  convert_to_eval.py  eval_config.py  eval_config.yaml  eval_data_base.yaml  generate_answers.py  ls_response.py
src/lightspeed_core_evaluation/: driver.py  eval_run_common.py  rag_eval.py  response_evaluation.py  taxonomy_eval.py
src/lightspeed_evaluation/: __init__.py  api.py
src/ragas-eval/: .gitignore  README.md  pyproject.toml  ragas_eval.py
tests/: README.md  conftest.py  run_tests.py  test_cli.py  test_compare_evaluations.py  test_config.py  test_evaluation.py  test_metrics.py
tests/integration/: __init__.py  lightspeed-stack.yaml  system-config-agents-proposal.yaml  system-config-agents-query.yaml  system-config-agents-streaming.yaml  system-config-query.yaml  system-config-streaming.yaml  test_cli.py  test_config.py  test_evaluation.py  test_evaluation_data.yaml  test_evaluation_data_proposal.yaml  test_evaluation_data_subprocess.yaml  test_full_evaluation.py  test_metrics.py  test_proposal_evaluation.py  test_scenario_data_validation.py  test_subprocess_evaluation.py
tests/script/: conftest.py  test_compare_abc_runs.py  test_compare_against_baseline.py  test_compare_evaluations.py  test_run_multi_provider_eval.py
tests/unit/: __init__.py  test_api.py
(+441 files in other folders)
