[project]
name = "lightspeed-evaluation"
version = "0.7.1"
description = "Evaluate LLM-powered applications (e2e) — responses, context, tool calls, and agentic workflows"
authors = []
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "ragas>=0.4.0,<=0.4.3",
    "instructor<1.15.0", # 1.15.x has a race condition bug in ModeRegistry.get_handlers(), downgrading until it is resolved upstream
    "deepeval>=3.9.0,<=3.9.1",
    "litellm>=1.84.0,<=1.89.3",
    "pydantic>=2.10.0,<=2.12.5",
    "pyyaml>=6.0,<=6.0.2",
    "pandas>=2.2.0,<=2.3.2",
    "datasets>=3.0.0,<=4.0.0",
    "matplotlib>=3.5.0,<=3.10.6",
    "seaborn>=0.11.0,<=0.13.2",
    "numpy>=1.23.0,<=2.3.2",
    "scipy>=1.14.0,<=1.16.2",
    "httpx>=0.28.0,<=0.28.1",
    "tqdm==4.67.1",
    "click>=8.3.3,<=8.4.2",
    "diskcache==5.6.3",
    "tenacity==9.1.2",
    "langchain[huggingface]>=1.3.9,<=1.3.11",
    "langchain-community>=0.3.0,<0.4",
    "langchain-google-genai>=2.0.0,<=2.1.12",
    "sqlalchemy>=2.0.0,<=2.0.43",
]

[project.optional-dependencies]
# Google Vertex AI judge/eval support - required when llm.provider: vertex
# (LiteLLM's vertex_ai/* models import the vertexai SDK).
# Install with:
#   uv sync --extra vertex
vertex = [
    "google-cloud-aiplatform>=1.38",
]

# Local embedding models - includes torch
# Only needed when using embedding.provider: huggingface
#
# Installation options:
#   CPU (default, ~2GB): uv sync --extra local-embeddings
#   GPU (~6GB):          cp uv-gpu.lock uv.lock && uv sync --extra local-embeddings --frozen
local-embeddings = [
    "torch>=2.5.0,<=2.10.0",
    "sentence-transformers>=5.2.0,<=5.2.3",
]

# NLP metrics dependencies - required for nlp:bleu, nlp:rouge, nlp:semantic_similarity_distance
# Install with:
#   pip install 'lightspeed-evaluation[nlp-metrics]'
# or
#   uv sync --extra nlp-metrics
nlp-metrics = [
    "sacrebleu>=2.0.0,<=2.5.1",      # Required for BLEU score
    "rouge-score==0.1.2",            # Required for ROUGE score
    "rapidfuzz>=3.0.0,<=3.14.3",     # Required for semantic_similarity_distance
]

# Langfuse observability - export evaluation scores to Langfuse
# Install with:
#   pip install 'lightspeed-evaluation[langfuse]'
# or
#   uv sync --extra langfuse
langfuse = [
    "langfuse>=4.0.0,<5.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.7.0,<=1.9.2",
    "black>=26.3.1,<=26.5.1",
    "mypy>=1.15.0,<=1.17.1",
    "ruff>=0.9.0,<=0.12.11",
    "pyright>=1.1.401,<=1.1.404",
    "pydocstyle==6.3.0",
    "pylint-pydantic>=0.3.0,<=0.3.5",
    "pytest>=9.0.3,<=9.1.1",
    "pytest-cov>=6.0.0,<=6.2.1",
    "pytest-mock==3.15.1",
    "pytest-timeout==2.4.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
lightspeed-eval = "lightspeed_evaluation.runner.evaluation:main"
generate_answers = "generate_answers.generate_answers:main"

# Note: torch[cpu] variant configuration removed for uv compatibility
# Modern PyTorch versions are available on PyPI directly

[tool.black]
line-length = 88

[tool.pydocstyle]
convention = "google"

[tool.mypy]
plugins = ["pydantic.mypy"]
explicit_package_bases = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pylint.MASTER]
source-roots = ["src", "script", "tests"]
load-plugins = ["pylint_pydantic"]
init-hook = "import sys; sys.path.append('.')"
[tool.pylint."MESSAGES CONTROL"]
disable = ["R0801"]

[tool.pyright]
extraPaths = ["./src"]

[tool.ruff]
line-length = 88
[tool.ruff.lint]
extend-select = ["TID251", "UP006", "UP007", "UP010", "UP017", "UP035", "RUF100", "B009", "B010", "DTZ005", "D202", "I001", "PLR1733"]
[tool.ruff.lint.flake8-tidy-imports.banned-api]
unittest = { msg = "use pytest instead of unittest" }
"unittest.mock" = { msg = "use pytest-mock instead of unittest.mock" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/lightspeed_evaluation"]

# UV configuration for CPU-only PyTorch (reduces package size from ~6GB to ~2GB)
[tool.uv]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Use CPU index for torch by default
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

# Lock files:
#   uv.lock     - CPU-only PyTorch (default, ~2GB)
#   uv-gpu.lock - Full PyTorch with CUDA (~6GB)
#
# Installation:
#   CPU: uv sync --extra local-embeddings
#   GPU: cp uv-gpu.lock uv.lock && uv sync --extra local-embeddings --frozen
