[project]
name = "lightspeed-core-evaluation"
version = "0.1.0"
description = "Evaluation tooling for lightspeed-core"
authors = []

# always generate Python 3.11-compatible code.
target-version = "py311"
lint.pydocstyle.convention = "google"
line-length = 100

dependencies = [
    "pdm>=2.21.0",
    "pandas>=2.1.4",
    "httpx>=0.27.2",
    "langchain>=0.3.12",
    "llama-index>=0.12.25",
    "llama-index-core>=0.12.2",
    "llama-index-vector-stores-faiss>=0.3.0",
    "llama-index-embeddings-huggingface>=0.4.0",
    "ibm-watsonx-ai>=1.3.6",
    "tqdm>=4.67.1",
    "llama-index-vector-stores-postgres>=0.4.0",
    "rouge-score>=0.1.2",
    "torch==2.7.0+cpu",
    "road-core @ git+https://github.com/road-core/service.git",
    "matplotlib>=3.10.1",
    "ragas>=0.2.15",
]
requires-python = ">=3.11.1,<=3.12.8"
readme = "README.md"
license = {text = "Apache"}

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.8.0",
    "pyright>=1.1.401",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[project.scripts]
evaluate = "lightspeed_core_evaluation.driver:main"
eval = "lightspeed_core_evaluation.driver:main"
query_rag = "lightspeed_core_evaluation.query_rag:main"

# The following section is needed only for torch[cpu] variant on Linux,
# because this variant need to be downloaded from external link, not from
# standard Python package index:
#
[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch/"
name = "torch"

[tool.mypy]
disable_error_code = ["union-attr", "return-value", "arg-type", "import-untyped"]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true