[project]
name = "lsc-agent-eval"
version = "0.5.0"
description = "Agent evaluation package for lightspeed-core systems"
authors = []
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = {text = "Apache"}

dependencies = [
    "pandas>=2.1.4",
    "httpx>=0.27.2",
    "tqdm>=4.67.1",
    "pyyaml>=6.0",
    "litellm>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.8.0",
    "pyright>=1.1.401",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
lsc-agent-eval = "lsc_agent_eval.agent_eval:main"

[project.urls]
"Homepage" = "https://github.com/lightspeed-core/lightspeed-evaluation"
"Bug Tracker" = "https://github.com/lightspeed-core/lightspeed-evaluation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
# always generate Python 3.11-compatible code.
target-version = "py311"
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google" 