[project]
name = "lsc_eval"
version = "0.1.0"
description = "LSC Evaluation Framework"
authors = []
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "Apache"}

dependencies = [
    "ragas>=0.3.0",
    "deepeval>=1.3.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pandas>=1.5.0",
    "datasets>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=1.23.0",
    "torch==2.7.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.8.0",
    "pyright>=1.1.401",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]


[project.urls]
"Homepage" = "https://github.com/lightspeed-core/lightspeed-evaluation"
"Bug Tracker" = "https://github.com/lightspeed-core/lightspeed-evaluation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# always generate Python 3.11-compatible code.
target-version = "py311"
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google" 

[tool.black]
line-length = 100
target-version = ['py311']
