[project]
name = "ragas-eval"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vladimír Kadlec", email = "vkadlec@redhat.com"},
]
dependencies = ["ragas>=0.3.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
